pari_bindings/libpari/src/headers/paristio.h

typedef unsigned char *byteptr;
typedef ulong pari_sp;
struct pari_sieve
{
  ulong start, end, maxpos;
  ulong c, q;
  unsigned char* sieve;
};
/* iterator over primes */
typedef struct {
  int strategy; /* 1 to 4 */
  GEN bb; /* iterate through primes <= bb */
  ulong c, q; /* congruent to c (mod q) */

  /* strategy 1: private prime table */
  byteptr d; /* diffptr + n */
  ulong p; /* current p = n-th prime */
  ulong b; /* min(bb, ULONG_MAX) */

  /* strategy 2: sieve, use p */
  struct pari_sieve *psieve;
  unsigned char *sieve, *isieve;
  ulong cache[9]; /* look-ahead primes already computed */
  ulong chunk; /* # of odd integers in sieve */
  ulong a, end, sieveb; /* [a,end] interval currently being sieved,
                         * end <= sieveb = min(bb, maxprime^2, ULONG_MAX) */
  ulong pos, maxpos; /* current cell and max cell */

  /* strategy 3: unextprime, use p */

  /* strategy 4: nextprime */
  GEN pp;
} forprime_t;
typedef struct forvec_t {
  long first;
  GEN *a, *m, *M; /* current n-uplet, minima, Maxima */
  long n; /* length */
  GEN (*next)(struct forvec_t *);
} forvec_t;
struct pari_mainstack
{
  pari_sp top, bot, vbot;
  size_t size, rsize, vsize, memused;
};
struct pari_compilestate
{
  long opcode, operand, accesslex, data, localvars, frames, dbginfo;
  long offset, nblex;
  const char *dbgstart;
};
struct pari_mtstate
{
  long pending_threads;
  long is_thread;
  long trace_level;
};
struct pari_evalstate
{
  pari_sp avma;
  long sp;
  long rp;
  long var;
  long lvars;
  long locks;
  long prec;
  long trace;
  struct pari_mtstate mt;
  struct pari_compilestate comp;
};
struct pari_varstate
{
  long nvar, max_avail, min_priority, max_priority;
};
extern THREAD struct pari_mainstack *pari_mainstack;
struct pari_global_state
{
  long debugvar;
  long bitprec;
  GEN primetab;
  GEN seadata;
  long *varpriority;
  struct pari_varstate varstate;
};
struct pari_thread
{
  struct pari_mainstack st;
  struct pari_global_state gs;
  GEN data;
};
struct mt_state
{
  GEN worker;
  GEN pending;
  long workid;
};
struct pari_mt
{
  struct mt_state mt;
  GEN (*get)(struct mt_state *mt, long *workid, long *pending);
  void (*submit)(struct mt_state *mt, long workid, GEN work);
  void (*end)(void);
};
struct parfor_iter
{
  long pending;
  GEN worker;
  struct pari_mt pt;
};
typedef struct
{
  GEN a, b;
  struct parfor_iter iter;
} parfor_t;
typedef struct
{
  GEN x, W;
  long i, l;
  struct parfor_iter iter;
} parforeach_t;
typedef struct
{
  GEN v;
  forprime_t forprime;
  struct parfor_iter iter;
} parforprime_t;
typedef struct
{
  GEN v;
  forvec_t forvec;
  struct parfor_iter iter;
} parforvec_t;
/* hashtables */
typedef struct hashentry {
  void *key, *val;
  ulong hash; /* hash(key) */
  struct hashentry *next;
} hashentry;
typedef struct hashtable {
  ulong len; /* table length */
  hashentry **table; /* the table */
  ulong nb, maxnb; /* number of entries stored and max nb before enlarging */
  ulong pindex; /* prime index */
  ulong (*hash) (void *k); /* hash function */
  int (*eq) (void *k1, void *k2); /* equality test */
  int use_stack; /* use stack_malloc instead of malloc ? */
} hashtable;
typedef struct {
  char *PATH;
  char **dirs;
} gp_path; /* path */
typedef struct {
  char format; /* e,f,g */
  long sigd;   /* -1 (all) or number of significant digits printed */
  int sp;      /* 0 = suppress whitespace from output */
  int prettyp; /* output style: raw, prettyprint, etc */
  int TeXstyle;
} pariout_t; /* output format */
extern THREAD pari_sp avma;