pari_bindings/libpari/src/headers/parinf.h

typedef struct {
  GEN T, dT; /* defining polynomial (monic ZX), disc(T) */
  GEN T0; /* original defining polynomial (ZX) */
  GEN unscale; /* T = C*T0(x / unscale), rational */
  GEN dK; /* disc(K) */
  GEN index; /* [O_K : Z[X]/(T)] */
  GEN basis;  /* Z-basis of O_K (t_VEC of t_POL) */

  long r1; /* number of real places of K */
  GEN basden; /* [nums(bas), dens(bas)] */
  GEN dTP, dTE; /* (possibly partial) factorization of dT, primes / exponents */
  GEN dKP, dKE; /* (possibly partial) factorization of dK, primes / exponents */
  long certify; /* must we certify at the end */
} nfmaxord_t;
/* qfr3 / qfr5 */
struct qfr_data { GEN D, sqrtD, isqrtD; };
/* for fincke_pohst() */
typedef struct FP_chk_fun {
  GEN (*f)(void *,GEN);
  /* f_init allowed to permute the columns of u and r */
  GEN (*f_init)(struct FP_chk_fun*,GEN,GEN);
  GEN (*f_post)(struct FP_chk_fun*,GEN,GEN);
  void *data;
  long skipfirst;
} FP_chk_fun;
/* for ideallog / zlog */
typedef struct {
  GEN bid;
  GEN P, k;
  GEN sprk; /* sprk[i] = sprkinit(P[i]^k[i])*/
  GEN archp; /* archimedean part of conductor, in permutation form */
  GEN mod;
  GEN U; /* base change matrix blocks from (Z_K/P^k)^* and (Z/2)^#f_oo
          * to bid.gen */
  long hU; /* #bid.gen */
  int no2; /* 1 iff fa2 = fa, i.e. no prime of norm 2 divide exactly bid.mod */
} zlog_S;