pari_bindings/type_description.ml


  let pari_compilestate_opcode = field pari_compilestate "opcode" long
  let pari_compilestate_operand = field pari_compilestate "operand" long
  let pari_compilestate_accesslex = field pari_compilestate "accesslex" long
  let pari_compilestate_data = field pari_compilestate "data" long
  let pari_compilestate_localvars = field pari_compilestate "localvars" long
  let pari_compilestate_frames = field pari_compilestate "frames" long
  let pari_compilestate_dbginfo = field pari_compilestate "dbginfo" long
  let pari_compilestate_offset = field pari_compilestate "offset" long
  let pari_compilestate_nblex = field pari_compilestate "nblex" long
  let pari_compilestate_dbgstart = field pari_compilestate "dbgstart" string
  let () = seal pari_compilestate
  let pari_mtstate : pari_mtstate structure typ = structure "pari_mtstate"
  let pari_mtstate_pending_threads = field pari_mtstate "pending_threads" long
  let pari_mtstate_is_thread = field pari_mtstate "is_thread" long
  let pari_mtstate_trace_level = field pari_mtstate "trace_level" long
  let () = seal pari_mtstate
  let pari_evalstate : pari_evalstate structure typ = structure "pari_evalstate"
  let pari_evalstate_avma = field pari_evalstate "avma" pari_sp
  let pari_evalstate_sp = field pari_evalstate "sp" long
  let pari_evalstate_rp = field pari_evalstate "rp" long
  let pari_evalstate_var = field pari_evalstate "var" long
  let pari_evalstate_lvars = field pari_evalstate "lvars" long
  let pari_evalstate_locks = field pari_evalstate "locks" long
  let pari_evalstate_prec = field pari_evalstate "prec" long
  let pari_evalstate_trace = field pari_evalstate "trace" long
  let pari_evalstate_mt = field pari_evalstate "mt" pari_mtstate
  let pari_evalstate_comp = field pari_evalstate "comp" pari_compilestate
  let () = seal pari_evalstate
  let pari_varstate : pari_varstate structure typ = structure "pari_varstate"
  let pari_varstate_nvar = field pari_varstate "nvar" long
  let pari_varstate_max_avail = field pari_varstate "max_avail" long
  let pari_varstate_min_priority = field pari_varstate "min_priority" long
  let pari_varstate_max_priority = field pari_varstate "max_priority" long
  let () = seal pari_varstate

  let pari_global_state : pari_global_state structure typ =
    structure "pari_global_state"

  let pari_global_state_debugvar = field pari_global_state "debugvar" long
  let pari_global_state_bitprec = field pari_global_state "bitprec" long
  let pari_global_state_primetab = field pari_global_state "primetab" gen
  let pari_global_state_seadata = field pari_global_state "seadata" gen

  let pari_global_state_varpriority =
    field pari_global_state "varpriority" (ptr long)

  let pari_global_state_varstate =
    field pari_global_state "varstate" pari_varstate

  let () = seal pari_global_state
  let pari_thread : pari_thread structure typ = structure "pari_thread"
  let pari_thread_st = field pari_thread "st" pari_mainstack
  let pari_thread_gs = field pari_thread "gs" pari_global_state
  let pari_thread_data = field pari_thread "data" gen
  let () = seal pari_thread
  let mt_state : mt_state structure typ = structure "mt_state"
  let mt_state_worker = field mt_state "worker" gen
  let mt_state_pending = field mt_state "pending" gen
  let mt_state_workid = field mt_state "workid" long
  let () = seal mt_state
  let pari_mt : pari_mt structure typ = structure "pari_mt"
  let pari_mt_mt = field pari_mt "mt" mt_state

  let pari_mt_get =
    field pari_mt "get"
      (static_funptr
         T.(ptr mt_state @-> ptr long @-> ptr long @-> returning gen))

  let pari_mt_submit =
    field pari_mt "submit"
      (static_funptr T.(ptr mt_state @-> long @-> gen @-> returning void))

  let pari_mt_end = field pari_mt "end" (static_funptr T.(returning void))
  let () = seal pari_mt
  let parfor_iter : parfor_iter structure typ = structure "parfor_iter"
  let parfor_iter_pending = field parfor_iter "pending" long
  let parfor_iter_worker = field parfor_iter "worker" gen
  let parfor_iter_pt = field parfor_iter "pt" pari_mt
  let () = seal parfor_iter

  let parfor_t : parfor_t structure typ =
    typedef (structure "parfor_t") "parfor_t"

  let parfor_t_a = field parfor_t "a" gen
  let parfor_t_b = field parfor_t "b" gen
  let parfor_t_iter = field parfor_t "iter" parfor_iter
  let () = seal parfor_t

  let parforeach_t : parforeach_t structure typ =
    typedef (structure "parforeach_t") "parforeach_t"

  let parforeach_t_x = field parforeach_t "x" gen
  let parforeach_t_W = field parforeach_t "W" gen
  let parforeach_t_i = field parforeach_t "i" long
  let parforeach_t_l = field parforeach_t "l" long
  let parforeach_t_iter = field parforeach_t "iter" parfor_iter
  let () = seal parforeach_t

  let parforprime_t : parforprime_t structure typ =
    typedef (structure "parforprime_t") "parforprime_t"

  let parforprime_t_v = field parforprime_t "v" gen
  let parforprime_t_forprime = field parforprime_t "forprime" forprime_t
  let parforprime_t_iter = field parforprime_t "iter" parfor_iter
  let () = seal parforprime_t

  let parforvec_t : parforvec_t structure typ =
    typedef (structure "parforvec_t") "parforvec_t"

  let parforvec_t_v = field parforvec_t "v" gen
  let parforvec_t_forvec = field parforvec_t "forvec" forvec_t
  let parforvec_t_iter = field parforvec_t "iter" parfor_iter
  let () = seal parforvec_t

  let hashentry : hashentry structure typ =
    typedef (structure "hashentry") "hashentry"

  let hashentry_key = field hashentry "key" (ptr void)
  let hashentry_val = field hashentry "val" (ptr void)
  let hashentry_hash = field hashentry "hash" pari_ulong
  let hashentry_next = field hashentry "next" (ptr hashentry)
  let () = seal hashentry

  let hashtable : hashtable structure typ =
    typedef (structure "hashtable") "hashtable"

  let hashtable_len = field hashtable "len" pari_ulong
  let hashtable_table = field hashtable "table" (ptr (ptr hashentry))
  let hashtable_nb = field hashtable "nb" pari_ulong
  let hashtable_maxnb = field hashtable "maxnb" pari_ulong
  let hashtable_pindex = field hashtable "pindex" pari_ulong

  let hashtable_hash =
    field hashtable "hash" (static_funptr T.(ptr void @-> returning pari_ulong))

  let hashtable_eq =
    field hashtable "eq"
      (static_funptr T.(ptr void @-> ptr void @-> returning int))

  let hashtable_use_stack = field hashtable "use_stack" int
  let () = seal hashtable
  let gp_path : gp_path structure typ = typedef (structure "gp_path") "gp_path"
  let gp_path_PATH = field gp_path "PATH" string
  let gp_path_dirs = field gp_path "dirs" (ptr string)
  let () = seal gp_path

  let pariout_t : pariout_t structure typ =
    typedef (structure "pariout_t") "pariout_t"

  let pariout_t_format = field pariout_t "format" char
  let pariout_t_sigd = field pariout_t "sigd" long
  let pariout_t_sp = field pariout_t "sp" int
  let pariout_t_prettyp = field pariout_t "prettyp" int
  let pariout_t_TeXstyle = field pariout_t "TeXstyle" int
  let () = seal pariout_t

  let nfmaxord_t : nfmaxord_t structure typ =
    typedef (structure "nfmaxord_t") "nfmaxord_t"

  let nfmaxord_t_T = field nfmaxord_t "T" gen
  let nfmaxord_t_dT = field nfmaxord_t "dT" gen
  let nfmaxord_t_T0 = field nfmaxord_t "T0" gen
  let nfmaxord_t_unscale = field nfmaxord_t "unscale" gen
  let nfmaxord_t_dK = field nfmaxord_t "dK" gen
  let nfmaxord_t_index = field nfmaxord_t "index" gen
  let nfmaxord_t_basis = field nfmaxord_t "basis" gen
  let nfmaxord_t_r1 = field nfmaxord_t "r1" long
  let nfmaxord_t_basden = field nfmaxord_t "basden" gen
  let nfmaxord_t_dTP = field nfmaxord_t "dTP" gen
  let nfmaxord_t_dTE = field nfmaxord_t "dTE" gen
  let nfmaxord_t_dKP = field nfmaxord_t "dKP" gen
  let nfmaxord_t_dKE = field nfmaxord_t "dKE" gen
  let nfmaxord_t_certify = field nfmaxord_t "certify" long
  let () = seal nfmaxord_t
  let qfr_data : qfr_data structure typ = structure "qfr_data"
  let qfr_data_D = field qfr_data "D" gen
  let qfr_data_sqrtD = field qfr_data "sqrtD" gen
  let qfr_data_isqrtD = field qfr_data "isqrtD" gen
  let () = seal qfr_data

  let fp_chk_fun : fp_chk_fun structure typ =
    typedef (structure "FP_chk_fun") "FP_chk_fun"

  let fp_chk_fun_f =
    field fp_chk_fun "f" (static_funptr T.(ptr void @-> gen @-> returning gen))

  let fp_chk_fun_f_init =
    field fp_chk_fun "f_init"
      (static_funptr T.(ptr fp_chk_fun @-> gen @-> gen @-> returning gen))

  let fp_chk_fun_f_post =
    field fp_chk_fun "f_post"
      (static_funptr T.(ptr fp_chk_fun @-> gen @-> gen @-> returning gen))

  let fp_chk_fun_data = field fp_chk_fun "data" (ptr void)
  let fp_chk_fun_skipfirst = field fp_chk_fun "skipfirst" long
  let () = seal fp_chk_fun
  let zlog_s : zlog_s structure typ = typedef (structure "zlog_S") "zlog_S"
  let zlog_s_bid = field zlog_s "bid" gen
  let zlog_s_P = field zlog_s "P" gen
  let zlog_s_k = field zlog_s "k" gen
  let zlog_s_sprk = field zlog_s "sprk" gen
  let zlog_s_archp = field zlog_s "archp" gen
  let zlog_s_mod = field zlog_s "mod" gen
  let zlog_s_U = field zlog_s "U" gen
  let zlog_s_hU = field zlog_s "hU" long
  let zlog_s_no2 = field zlog_s "no2" int
  let () = seal zlog_s
  let bb_group : bb_group structure typ = structure "bb_group"

  let bb_group_mul =
    field bb_group "mul"
      (static_funptr T.(ptr void @-> gen @-> gen @-> returning gen))

  let bb_group_pow =
    field bb_group "pow"
      (static_funptr T.(ptr void @-> gen @-> gen @-> returning gen))

  let bb_group_rand =
    field bb_group "rand" (static_funptr T.(ptr void @-> returning gen))

  let bb_group_hash =
    field bb_group "hash" (static_funptr T.(gen @-> returning pari_ulong))

  let bb_group_equal =
    field bb_group "equal" (static_funptr T.(gen @-> gen @-> returning int))

  let bb_group_equal1 =
    field bb_group "equal1" (static_funptr T.(gen @-> returning int))

  let bb_group_easylog =
    field bb_group "easylog"
      (static_funptr T.(ptr void @-> gen @-> gen @-> gen @-> returning gen))

  let () = seal bb_group
  let bb_field : bb_field structure typ = structure "bb_field"

  let bb_field_red =
    field bb_field "red" (static_funptr T.(ptr void @-> gen @-> returning gen))

  let bb_field_add =
    field bb_field "add"
      (static_funptr T.(ptr void @-> gen @-> gen @-> returning gen))

  let bb_field_mul =
    field bb_field "mul"
      (static_funptr T.(ptr void @-> gen @-> gen @-> returning gen))

  let bb_field_neg =
    field bb_field "neg" (static_funptr T.(ptr void @-> gen @-> returning gen))

  let bb_field_inv =
    field bb_field "inv" (static_funptr T.(ptr void @-> gen @-> returning gen))

  let bb_field_equal0 =
    field bb_field "equal0" (static_funptr T.(gen @-> returning int))

  let bb_field_s =
    field bb_field "s" (static_funptr T.(ptr void @-> long @-> returning gen))

  let () = seal bb_field
  let bb_algebra : bb_algebra structure typ = structure "bb_algebra"

  let bb_algebra_red =
    field bb_algebra "red"
      (static_funptr T.(ptr void @-> gen @-> returning gen))

  let bb_algebra_add =
    field bb_algebra "add"
      (static_funptr T.(ptr void @-> gen @-> gen @-> returning gen))

  let bb_algebra_sub =
    field bb_algebra "sub"
      (static_funptr T.(ptr void @-> gen @-> gen @-> returning gen))

  let bb_algebra_mul =
    field bb_algebra "mul"
      (static_funptr T.(ptr void @-> gen @-> gen @-> returning gen))

  let bb_algebra_sqr =
    field bb_algebra "sqr"
      (static_funptr T.(ptr void @-> gen @-> returning gen))

  let bb_algebra_one =
    field bb_algebra "one" (static_funptr T.(ptr void @-> returning gen))

  let bb_algebra_zero =
    field bb_algebra "zero" (static_funptr T.(ptr void @-> returning gen))

  let () = seal bb_algebra
  let bb_ring : bb_ring structure typ = structure "bb_ring"

  let bb_ring_add =
    field bb_ring "add"
      (static_funptr T.(ptr void @-> gen @-> gen @-> returning gen))
